send journey sewlect added